fixed content overlapping topnav bar

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     top: 0px;
     width: 100%;
     overflow: visible;
+    z-index: 1000;
   }
   
   /* Style the links inside the navigation bar */
